--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- Image by <a href="https://pixabay.com/users/chiplanay-1971251/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3303111">chiplanay</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3303111">Pixabay</a> -->
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Andika&display=swap" rel="stylesheet">
     <title>2021 AU National Old Bird Hall of Fame Marathon Distance</title>
   </head>
   <!-- ***************************************
@@ -29,7 +32,9 @@
   * You can do it! (*•̀ᴗ•́*)و
   ******************************************** -->
   <body>
+    <header>
     <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
+    </header>
     <main>
       <table>
         <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a></caption>
